--- a/watchland/package.json
+++ b/watchland/package.json
@@ -54,6 +54,7 @@
     "concurrently": "^7.3.0",
     "generate-react-cli": "^7.2.0",
     "i": "^0.3.7",
+    "json-server": "^0.17.0",
     "node-sass": "^7.0.1",
     "npm-run-all": "^4.1.5"
   }
