--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.7.4",
@@ -52,6 +53,7 @@
   },
   "devDependencies": {
     "@types/node-sass": "^4.11.2",
+    "@types/react-redux": "^7.1.24",
     "concurrently": "^7.3.0",
     "generate-react-cli": "^7.2.0",
     "i": "^0.3.7",
