--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "@aws-sdk/types": "^3.159.0",
     "@reduxjs/toolkit": "^1.8.5",
+    "@types/react-datepicker": "^4.8.0",
     "aws-sdk": "^2.1195.0",
     "react": "^18.2.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.4",
