--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@aws-sdk/types": "^3.159.0",
     "@reduxjs/toolkit": "^1.8.5",
     "aws-sdk": "^2.1195.0",
     "react": "^18.2.0",
@@ -21,12 +20,8 @@
     "watch": "react-scripts start && node-sass src/ -0 src/ -w -r",
     "generate": "npx generate-react-cli component",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "dev": "concurrently npm:backend:*",
-    "backend:aws": "json-server --watch ./data/aws.json --port 3004",
-    "backend:google": "json-server --watch ./data/google.json --port 3005",
-    "backend:azure": "json-server --watch ./data/azure.json --port 3006"
+    "test": "react-scripts test"
+
   },
   "eslintConfig": {
     "extends": [
@@ -47,6 +42,10 @@
     ]
   },
   "devDependencies": {
+    "@aws-sdk/types": "^3.159.0",
+    "@babel/core": "^7.18.5",
+    "@babel/preset-env": "^7.18.2",
+    "@babel/preset-typescript": "^7.17.12",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -58,12 +57,8 @@
     "@types/react-redux": "^7.1.24",
     "@types/react-router-dom": "^5.3.3",
     "@types/uuid": "^8.3.4",
-    "concurrently": "^7.3.0",
     "generate-react-cli": "^7.2.0",
-    "i": "^0.3.7",
-    "json-server": "^0.17.0",
     "node-sass": "^7.0.1",
-    "npm-run-all": "^4.1.5",
     "typescript": "^4.7.4"
   }
 }
